--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,6 +61,9 @@
         <receiver
             android:name=".AlarmReceiver"
             android:enabled="true" />
+        <receiver
+            android:name=".SpendReceiver"
+            android:enabled="true" />
     </application>
 
     <supports-screens
